overscroll on small phones solved

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -76,5 +76,8 @@ nav a {
 @media(max-width: 380px){
     nav h1{
         width: 25rem;
+    }
+    nav a{
+        padding: 0 4px;
     }    
 }
